--- a/night/login.html
+++ b/night/login.html
@@ -191,8 +191,7 @@
                 <label>
                     <input name="psw" type="password">
                 </label><br>
-                <input name="Login" type="submit"><br><br>
-                <p class="warn">{{msg}}</p>
+                <a href="/night/index.html"><input name="Login" type="submit"></a><br><br>
             </form>
         </center>
         <br>
