--- a/night/login.html
+++ b/night/login.html
@@ -177,11 +177,7 @@
     </style>
 </head>
 <body>
-{% if msg %}
-    <div>
-{% else %}
     <div class="fade">
-{% endif %}
         <h1>Login to access this site</h1>
         <p>No idea about username and password? Go and ask your service provider.</p><br>
         <a href="/">I think I`ve already logged in -></a>
@@ -191,7 +187,7 @@
                 <label>
                     <input name="psw" type="password">
                 </label><br>
-                <a href="/night/index.html"><input name="Login" type="submit"></a><br><br>
+                <a href="index.html"><input name="Login" type="submit"></a><br><br>
             </form>
         </center>
         <br>
