--- a/night/index.html
+++ b/night/index.html
@@ -217,7 +217,7 @@
 </head>
 <body>
 <div>
-    <ul class="menu"><li class="menu"><a class="menu" href="#">Home</a></li><li class="logout"><a class="logout" href="/night/login.html">Log out</a></li></ul>
+    <ul class="menu"><li class="menu"><a class="menu" href="#">Home</a></li><li class="logout"><a class="logout" href="login.html">Log out</a></li></ul>
 </div>
 <div class="fade">
     <h1>Header 1</h1>
