--- a/night/login.html
+++ b/night/login.html
@@ -187,7 +187,7 @@
                 <label>
                     <input name="psw" type="password">
                 </label><br>
-                <a href="index.html"><input name="Login" type="button"></a><br><br>
+                <a href="index.html"><input name="Login" type="button" value="Submit"></a><br><br>
             </form>
         </center>
         <br>
