--- a/aeroglass/login.html
+++ b/aeroglass/login.html
@@ -354,7 +354,7 @@
             </div>
             <div class="btn-box">
                 <a>Forgot password?</a>
-                <button name="Login">Login</button>
+                <button name="Login" type="button">Login</button>
                 <br>
             </div>
         </form>
